--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,6 @@
 name = "plano-de-trabalho-ses-sp-2026"
 compatibility_date = "2026-02-12"
-pages_build_output_dir = "dist"
+pages_build_output_dir = "./dist"
 
 [build]
 command = "npm run build"
-cwd = "./"
